force-app/main/default/objects/Territory_Tag__c/Territory_Tag__c.object-meta.xml
<CustomObject>
    <description>Represents the assignment of a tag to a territory.</description>
    <label>Territory Tag</label>
    <nameField>
        <displayFormat>TT-{00000}</displayFormat>
        <label>Territory Tag No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Territory Tags</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>