force-app/main/default/objects/Territory_Tag__c/fields/Tag__c.field-meta.xml
<CustomField>
    <fullName>Tag__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The tag that is assigned to the territory.</description>
    <inlineHelpText>The tag that is assigned to the territory.</inlineHelpText>
    <label>Tag</label>
    <referenceTo>Tag__c</referenceTo>
    <relationshipLabel>Territory Tags</relationshipLabel>
    <relationshipName>Territory_Tags</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>