force-app/main/default/objects/Territory_Tag__c/fields/Territory__c.field-meta.xml
<CustomField>
    <fullName>Territory__c</fullName>
    <description>The territory to which this tag is assigned.</description>
    <inlineHelpText>The territory to which this tag is assigned.</inlineHelpText>
    <label>Territory</label>
    <referenceTo>Territory__c</referenceTo>
    <relationshipLabel>Territory Tags</relationshipLabel>
    <relationshipName>Territory_Tags</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>