force-app/main/default/objects/Territory_Tag__c/fields/Territory_Map__c.field-meta.xml
<CustomField>
    <fullName>Territory_Map__c</fullName>
    <description>The map to which this territory belongs to (e.g. Sales 2023).</description>
    <formula>Territory__r.Territory_Map__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The map to which this territory belongs to (e.g. Sales 2023).</inlineHelpText>
    <label>Territory Map</label>
    <type>Text</type>
</CustomField>