force-app/main/default/objects/Territory_Tag__c/fields/Territory_Map_Collection__c.field-meta.xml
<CustomField>
    <fullName>Territory_Map_Collection__c</fullName>
    <description>The collection to which this territory&apos;s map belongs (e.g. Sales).</description>
    <formula>Territory__r.Territory_Map__r.Territory_Map_Collection__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The collection to which this territory&apos;s map belongs (e.g. Sales).</inlineHelpText>
    <label>Territory Map Collection</label>
    <type>Text</type>
</CustomField>